--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,28 +1,36 @@
 {
-    "dockerComposeFile": "compose.yml",
-    "workspaceFolder": "/app",
-    "service": "app",
-    "containerUser": "vscode",
-    "portsAttributes": {
-      "80": {
-        "label": "Application",
-        "onAutoForward": "openBrowser"
-      }
-    },
-    "forwardPorts": [
-      80
-    ],
-    "features": {
-      "ghcr.io/cirolosapio/devcontainers-features/alpine-user": {},
-      "ghcr.io/cirolosapio/devcontainers-features/alpine-docker": {},
-      "ghcr.io/cirolosapio/devcontainers-features/alpine-starship": {},
-      "ghcr.io/cirolosapio/devcontainers-features/alpine-ohmyzsh": {},
-      "ghcr.io/cirolosapio/devcontainers-features/alpine-node": {}
-    },
-    "customizations": {
-      "vscode": {
-        "extensions": [
-        ]
-      }
+  "dockerComposeFile": "compose.yml",
+  "workspaceFolder": "/app",
+  "service": "app",
+  "containerUser": "vscode",
+  "portsAttributes": {
+    "80": {
+      "label": "Application",
+      "onAutoForward": "openBrowser"
+    }
+  },
+  "forwardPorts": [
+    80
+  ],
+  "features": {
+    "ghcr.io/cirolosapio/devcontainers-features/alpine-user": {},
+    "ghcr.io/cirolosapio/devcontainers-features/alpine-docker": {},
+    "ghcr.io/cirolosapio/devcontainers-features/alpine-starship": {},
+    "ghcr.io/cirolosapio/devcontainers-features/alpine-ohmyzsh": {},
+    "ghcr.io/cirolosapio/devcontainers-features/alpine-node": {}
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "Vue.volar",
+        "ChakrounAnas.turbo-console-log",
+        "dbaeumer.vscode-eslint",
+        "formulahendry.auto-close-tag",
+        "eamodio.gitlens",
+        "oderwat.indent-rainbow",
+        "pflannery.vscode-versionlens",
+        "usernamehw.errorlens"
+      ]
     }
   }
+}
