--- a/package.json
+++ b/package.json
@@ -7,28 +7,29 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
+    "lint:fix": "eslint ./ --fix",
     "test": "echo \"No test specified\" && exit 0",
     "dev": "quasar dev",
     "build": "quasar build"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
-    "axios": "^1.2.1",
-    "quasar": "^2.8.0",
-    "vue": "^3.4.18",
-    "vue-router": "^4.0.12"
+    "@quasar/extras": "^1.16.11",
+    "axios": "^1.6.8",
+    "quasar": "^2.15.4",
+    "vue": "^3.4.25",
+    "vue-router": "^4.3.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.15.0",
-    "@quasar/app-vite": "^1.8.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "^8.11.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-n": "^15.0.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-vue": "^9.0.0",
-    "postcss": "^8.4.14",
+    "@quasar/app-vite": "^1.8.3",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.1.1",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^17.3.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-vue": "^9.25.0",
+    "postcss": "^8.4.38",
     "vite-plugin-checker": "^0.6.4"
   },
   "engines": {
